replace collection for clarity